fix overflow transition

--- a/src/theme/Navbar/ExtendedNavbar/Search/SearchResult/styles.module.scss
+++ b/src/theme/Navbar/ExtendedNavbar/Search/SearchResult/styles.module.scss
@@ -119,7 +119,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 46px;
+    padding-left: 45px;
     padding-bottom: 5px;
     background-color: var(--black);
     border: none;
@@ -130,11 +130,11 @@
 }
 
 .hiddenResults {
-    overflow: hidden;
     transition: all 500ms;
     max-height: 0px;
     padding: 0px 15px;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .rotateSvg {
